# Eurobot-2026-Localization

./: .gitignore  README.md
core_algorithm/ekf/: .gitignore  package.xml  setup.py
core_algorithm/ekf/launch/: b_running_launch.py  run.launch
core_algorithm/fusion/: CMakeLists.txt  package.xml
core_algorithm/fusion/include/fusion/: ekf.hpp  fusion_node.hpp
core_algorithm/fusion/launch/: bag_test.launch  blue.launch  fake_cam.launch  y_running_launch.py  yellow.launch
core_algorithm/fusion/scripts/: ekf_node.py  fake_cam.py  test_br.py
core_algorithm/fusion/src/: ekf.cpp  fusion_node.cpp
core_algorithm/global/lidar_localization/: CMakeLists.txt  package.xml
core_algorithm/global/lidar_localization/launch/: calibrator_launch.xml
core_algorithm/global/lidar_localization/launch/firmware/: ydlidar_launch.py
core_algorithm/global/lidar_localization/scripts/: lidar_calibrator.py  pred_publisher.py
core_algorithm/global/lidar_localization_pkg/: setup.py
core_algorithm/global/lidar_localization_pkg/launch/: debug_visualize_launch.xml  obstacle_extractor_launch.xml  radius_compensation_launch.xml  view_obstacles_launch.xml
core_algorithm/global/lidar_localization_pkg/launch/firmware/: rplidar_s3_launch.py  ydlidar.yaml
core_algorithm/global/lidar_localization_pkg/lidar_localization_pkg/: lidar_member_function.py
core_algorithm/healthcheck/: package.xml  setup.cfg  setup.py
core_algorithm/healthcheck/healthcheck/: healthcheck.py  ready_signal_template.py
core_algorithm/local/imu_drive/: CMakeLists.txt  package.xml
core_algorithm/local/imu_drive/config/: imu_drive_firm.yaml
core_algorithm/local/imu_drive/include/imu_drive/: imu_drive.h
core_algorithm/local/imu_drive/launch/: imu_drive_firm.xml
core_algorithm/local/imu_drive/lib/: imu_drive.cpp
core_algorithm/local/imu_drive/src/: imu_drive_node.cpp
core_algorithm/local/local_filter/: CMakeLists.txt  package.xml
core_algorithm/local/local_filter/launch/: local_filter.xml
core_algorithm/local/local_filter/param/: local_filter.yaml
core_algorithm/local/local_filter/src/: local_filter_LPF.cpp
core_algorithm/local/wheel_inertial_odometry/: CMakeLists.txt  package.xml
core_algorithm/local/wheel_inertial_odometry/launch/: local_filter_whole.xml
core_algorithm/local/wheel_inertial_odometry/param/: local_filter_whole.yaml
core_algorithm/local/wheel_inertial_odometry/src/: WIO_LPF.cpp
core_algorithm/monitor/: CMakeLists.txt  package.xml
core_algorithm/rival/imm_filter/: CMakeLists.txt  package.xml
core_algorithm/rival/imm_filter/include/imm_filter/: IMM.h  ModelGenerator.h  imm_filter_node.h
core_algorithm/rival/imm_filter/launch/: imm_filter.xml
core_algorithm/rival/imm_filter/lib/: EKF.cpp  IMM.cpp  ModelGenerator.cpp
core_algorithm/rival/imm_filter/src/: imm_filter_node.cpp
core_algorithm/rival/rival_localization/: CMakeLists.txt  package.xml
core_algorithm/rival/rival_localization/config/: rival_localization.yaml  side_obstacles.yaml
core_algorithm/rival/rival_localization/include/rival_localization/: EKF.h  IMM.h  ModelGenerator.h  rival_localization.h
core_algorithm/rival/rival_localization/launch/: rival_localization.xml  side_rival.xml  view_rplidar_s3_launch.py
core_algorithm/rival/rival_localization/lib/: EKF.cpp  IMM.cpp  ModelGenerator.cpp
core_algorithm/rival/rival_localization/rviz/: rplidar_ros.rviz
core_algorithm/rival/rival_localization/src/: rival_localization.cpp
core_algorithm/scripts/: colcon_build.sh
docker/: .env  Dockerfile  docker-compose.yaml
