<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>healthcheck</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jossiew621@gapp.nthu.edu.tw">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ros2launch</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>numpy</depend>
  <depend>math</depend>
  <depend>tf2</depend>
  <depend>obstacle_detector</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>custom_interfaces</exec_depend>
</package>
